@@ -45,7 +45,7 @@ public class EmployeeWithTariffsDtoMapper extends AbstractConverter<Employee, Em
                             .nameUk(tariffLocation.getLocation().getRegion().getUkrName())
                             .nameEn(tariffLocation.getLocation().getRegion().getEnName())
                             .build())
-                        .collect(Collectors.toList()).get(0))
+                        .toList().getFirst())
                     .locationsDtos(getTariffs.getTariffsInfo().getTariffLocations().stream()
                         .map(tariffLocation -> LocationsDtos.builder()
                             .locationId(tariffLocation.getLocation().getId())
